--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+D<!doctype html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
@@ -569,4 +569,5 @@ const inc = () => { value++; el.textContent = value }</pre><div style="display:f
     onScroll(); 
   </script>
 </body>
+
 </html>
